--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -6,16 +6,16 @@ services:
       context: ./
       dockerfile: Dockerfile
     container_name: programwithgio-app
-    restart: always
+    restart: 'no'
     working_dir: /var/www/
     volumes:
       - ../src:/var/www
   nginx:
     image: nginx:1.19-alpine
     container_name: programwithgio-nginx
-    restart: always
+    restart: 'no'
     ports:
-      - 8000:80
+      - 80:80
     volumes:
       - ../src:/var/www
       - ./nginx:/etc/nginx/conf.d
